--- a/ThirdPersonController/Packages/manifest.json
+++ b/ThirdPersonController/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.vscode": "1.1.2",
+    "com.unity.inputsystem": "0.9.6-preview",
     "com.unity.package-manager-ui": "2.2.0",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
