--- a/ThirdPersonController/Packages/manifest.json
+++ b/ThirdPersonController/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "1.1.4",
-    "com.unity.inputsystem": "0.9.6-preview",
+    "com.unity.inputsystem": "1.0.0-preview.4",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.10",
+    "com.unity.timeline": "1.2.11",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
